# Claw

./: .gitignore  CLAUDE.md  Containerfile  PARITY.md  PHILOSOPHY.md  README.md  ROADMAP.md  USAGE.md  install.sh  prd.json  progress.txt
docs/: MODEL_COMPATIBILITY.md  container.md
rust/: .gitignore  CLAUDE.md  Cargo.toml  MOCK_PARITY_HARNESS.md  PARITY.md  README.md  TUI-ENHANCEMENT-PLAN.md  USAGE.md  mock_parity_scenarios.json
rust/.omc/plans/: tui-enhancement-plan.md
rust/crates/api/: Cargo.toml
rust/crates/api/benches/: request_building.rs
rust/crates/api/src/: client.rs  error.rs  http_client.rs  lib.rs  prompt_cache.rs  sse.rs  types.rs
rust/crates/api/src/providers/: anthropic.rs  mod.rs  openai_compat.rs
rust/crates/api/tests/: client_integration.rs  openai_compat_integration.rs  provider_client_integration.rs  proxy_integration.rs
rust/crates/commands/src/: lib.rs
rust/crates/compat-harness/src/: lib.rs
rust/crates/desktop/: Cargo.toml  PHASE3_DAEMON.md  app_monetization_analysis.md  package.json  tauri.conf.json
rust/crates/desktop/capabilities/: default.json
rust/crates/desktop/icons/: icon.icns
rust/crates/desktop/src/: anchors.rs  api_client.rs  compaction.rs  company.rs  config.rs  context_window.rs  daemon_client.rs  dream.rs  event_sink.rs  global_anchors.rs  hooks.rs  lib.rs  long_runner.rs  long_task.rs  loop_detector.rs  main.rs  mcp.rs  permission.rs  skills.rs  state.rs  token_stats.rs  tool_executor.rs  vault.rs  web_search.rs  weekly_os.rs
rust/crates/desktop/ui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
rust/crates/desktop/ui/src/: App.tsx  index.css
rust/crates/desktop/ui/src/components/: AgentDetailModal.tsx  AgentProfileModal.tsx  AnchorsPanel.tsx  ChatPanel.tsx  CompanyEditor.tsx  ContextHealthBadge.tsx  CostsPanel.tsx  DecisionLog.tsx  DreamReviewModal.tsx  HooksPanel.tsx  LongTaskPanel.tsx  MCPPanel.tsx  MemoryPanel.tsx  MessageBubble.tsx  OpcAgentPanel.tsx  PlusMenu.tsx  SessionSidebar.tsx  SettingsModal.tsx  SkillsPanel.tsx
rust/crates/desktop/ui/src/hooks/: useConversation.ts
rust/crates/mock-anthropic-service/: Cargo.toml
rust/crates/mock-anthropic-service/src/: lib.rs  main.rs
rust/crates/opc-daemon/: Cargo.toml
rust/crates/opc-daemon/src/: main.rs
rust/crates/plugins/src/: hooks.rs  lib.rs  (+1 more)
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: bash.rs  bash_validation.rs  bootstrap.rs  branch_lock.rs  compact.rs  config.rs  config_validate.rs  conversation.rs  file_ops.rs  git_context.rs  green_contract.rs  hooks.rs  lane_events.rs  lib.rs  lsp_client.rs  mcp.rs  mcp_client.rs  mcp_lifecycle_hardened.rs  mcp_server.rs  mcp_stdio.rs  mcp_tool_bridge.rs  memory.rs  oauth.rs  permission_enforcer.rs  permissions.rs  plugin_lifecycle.rs  policy_engine.rs  prompt.rs  recovery_recipes.rs  sandbox.rs  session.rs  session_control.rs  sse.rs  stale_base.rs  stale_branch.rs  summary_compression.rs  task_packet.rs  task_registry.rs  team_cron_registry.rs  trust_resolver.rs  (+2 more)
rust/crates/runtime/tests/: integration_tests.rs
rust/crates/rusty-claude-cli/: Cargo.toml  build.rs
rust/crates/rusty-claude-cli/src/: init.rs  input.rs  main.rs  render.rs
rust/crates/rusty-claude-cli/tests/: cli_flags_and_config_defaults.rs  compact_output.rs  mock_parity_harness.rs  output_format_contract.rs  resume_slash_commands.rs
rust/crates/telemetry/: Cargo.toml
rust/crates/tools/: Cargo.toml
rust/scripts/: run_mock_parity_diff.py  run_mock_parity_harness.sh
scripts/: fmt.sh
src/: _archive_helper.py
src/assistant/: __init__.py
src/bootstrap/: __init__.py
src/bridge/: __init__.py
src/buddy/: __init__.py
src/cli/: __init__.py
src/components/: __init__.py
src/constants/: __init__.py
src/coordinator/: __init__.py
src/entrypoints/: __init__.py
src/hooks/: __init__.py
src/keybindings/: __init__.py
src/memdir/: __init__.py
src/migrations/: __init__.py
src/moreright/: __init__.py
src/native_ts/: __init__.py
src/outputStyles/: __init__.py
src/plugins/: __init__.py
src/remote/: __init__.py
src/schemas/: __init__.py
src/screens/: __init__.py
src/server/: __init__.py
src/services/: __init__.py
src/skills/: __init__.py
src/state/: __init__.py
src/types/: __init__.py
src/upstreamproxy/: __init__.py
src/utils/: __init__.py
src/vim/: __init__.py
src/voice/: __init__.py
(+12 files in other folders)
