[package]
name = "opc-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "opc-desktop"
path = "src/main.rs"

[lib]
name = "opc_desktop_lib"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
flate2 = "1"
tar = "0.4"
futures-util = "0.3"
# Cross-platform secret storage: macOS Keychain, Windows Credential
# Manager, Linux Secret Service. Used by the credentials vault.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
api = { path = "../api" }
runtime = { path = "../runtime" }
tools = { path = "../tools" }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lints]
workspace = true
